[package]
name = "lib-swiss-ephemeris-astro-rust"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Savelev <vladislav.sage@yandex.ru>"]
repository = "https://github.com/VladislavVostok/swess-ephemeris-astro-rust"
description = "Библиотека для работы со Швейцарскими эфемеридами."
keyword = ["астрология", "швейцарские эфемериды", "планеты", "дизайн человека", "astrology", "swiss ephemeris", "planets", "human design"]
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]